--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==0.63.0
-pandas==1.3.4
-numpy==1.21.6
-scikit-learn==0.24.2
+streamlit
+pandas
+numpy
+scikit-learn
 streamlit
 matplotlib.pyplot
 scipy
